--- a/Exercicios/022/fundo006.html
+++ b/Exercicios/022/fundo006.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            height: 97vh;
+            /*height: 97vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
-        }
+            background-attachment: fixed;*/
+
+            /* shorthand - background = bg
+                ordem obrigatório - bg color > bg imagem > bg position > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center top no-repeat fixed;
+            background-size: cover;
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +34,13 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique perspiciatis recusandae unde laboriosam, beatae ducimus, ratione ipsum minus quod ab fugiat commodi! Quo doloribus nostrum, sit inventore similique facilis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deleniti vitae placeat possimus eaque sapiente rerum reprehenderit, repellendus soluta vero facere porro nesciunt nemo tempore ab fugit hic commodi ratione Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt autem soluta quidem blanditiis voluptas esse unde necessitatibus cumque cum fugiat! Doloremque error deleniti cupiditate. Assumenda obcaecati debitis delectus aspernatur veniam?</vel></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique perspiciatis recusandae unde laboriosam, beatae ducimus, ratione ipsum minus quod ab fugiat commodi! Quo doloribus nostrum, sit inventore similique facilis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deleniti vitae placeat possimus eaque sapiente rerum reprehenderit, repellendus soluta vero facere porro nesciunt nemo tempore ab fugit hic commodi ratione Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt autem soluta quidem blanditiis voluptas esse unde necessitatibus cumque cum fugiat! Doloremque error deleniti cupiditate. Assumenda obcaecati debitis delectus aspernatur veniam?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique perspiciatis recusandae unde laboriosam, beatae ducimus, ratione ipsum minus quod ab fugiat commodi! Quo doloribus nostrum, sit inventore similique facilis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deleniti vitae placeat possimus eaque sapiente rerum reprehenderit, repellendus soluta vero facere porro nesciunt nemo tempore ab fugit hic commodi ratione Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt autem soluta quidem blanditiis voluptas esse unde necessitatibus cumque cum fugiat! Doloremque error deleniti cupiditate. Assumenda obcaecati debitis delectus aspernatur veniam?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique perspiciatis recusandae unde laboriosam, beatae ducimus, ratione ipsum minus quod ab fugiat commodi! Quo doloribus nostrum, sit inventore similique facilis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deleniti vitae placeat possimus eaque sapiente rerum reprehenderit, repellendus soluta vero facere porro nesciunt nemo tempore ab fugit hic commodi ratione Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt autem soluta quidem blanditiis voluptas esse unde necessitatibus cumque cum fugiat! Doloremque error deleniti cupiditate. Assumenda obcaecati debitis delectus aspernatur veniam?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique perspiciatis recusandae unde laboriosam, beatae ducimus, ratione ipsum minus quod ab fugiat commodi! Quo doloribus nostrum, sit inventore similique facilis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deleniti vitae placeat possimus eaque sapiente rerum reprehenderit, repellendus soluta vero facere porro nesciunt nemo tempore ab fugit hic commodi ratione Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt autem soluta quidem blanditiis voluptas esse unde necessitatibus cumque cum fugiat! Doloremque error deleniti cupiditate. Assumenda obcaecati debitis delectus aspernatur veniam?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique perspiciatis recusandae unde laboriosam, beatae ducimus, ratione ipsum minus quod ab fugiat commodi! Quo doloribus nostrum, sit inventore similique facilis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deleniti vitae placeat possimus eaque sapiente rerum reprehenderit, repellendus soluta vero facere porro nesciunt nemo tempore ab fugit hic commodi ratione Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt autem soluta quidem blanditiis voluptas esse unde necessitatibus cumque cum fugiat! Doloremque error deleniti cupiditate. Assumenda obcaecati debitis delectus aspernatur veniam?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique perspiciatis recusandae unde laboriosam, beatae ducimus, ratione ipsum minus quod ab fugiat commodi! Quo doloribus nostrum, sit inventore similique facilis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deleniti vitae placeat possimus eaque sapiente rerum reprehenderit, repellendus soluta vero facere porro nesciunt nemo tempore ab fugit hic commodi ratione Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt autem soluta quidem blanditiis voluptas esse unde necessitatibus cumque cum fugiat! Doloremque error deleniti cupiditate. Assumenda obcaecati debitis delectus aspernatur veniam?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique perspiciatis recusandae unde laboriosam, beatae ducimus, ratione ipsum minus quod ab fugiat commodi! Quo doloribus nostrum, sit inventore similique facilis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deleniti vitae placeat possimus eaque sapiente rerum reprehenderit, repellendus soluta vero facere porro nesciunt nemo tempore ab fugit hic commodi ratione Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt autem soluta quidem blanditiis voluptas esse unde necessitatibus cumque cum fugiat! Doloremque error deleniti cupiditate. Assumenda obcaecati debitis delectus aspernatur veniam?</p>
     </main>
 </body>
 </html>
