--- a/Exercicios/023/tabela001.html
+++ b/Exercicios/023/tabela001.html
@@ -11,19 +11,17 @@
 
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
-        tr.linha{
-            background-color: gray;
-        }
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /*Alinha a celula, ou os dados, horizontalmente nas configurações, Left para esquerda, center para centro e rigth para direita*/
+            vertical-align: center;/*Alinha a célula, ou os dados verticalmente nas configurações, top para cima, midle para meio, bottom para baixo*/
         }
-        td.dado{
-            background-color: yellow;
-        }
+        
     </style>
 </head>
 <body>
@@ -31,9 +29,9 @@
    <!--
         Hierarquia de tabela simples
         Table = Tabela
-            Table Row = Linha de tabela
-                Table Header = Cabeçalho de tabela
-                Table Data = Dado de tabela
+            Table Row (tr) = Linha de tabela
+                Table Header (th) = Cabeçalho de tabela
+                Table Data (td) = Dado de tabela
    -->
    <table>
         <tr> <!--Primeira linha-->
@@ -41,14 +39,14 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha"> <!--Segunda linha-->
+        <tr> <!--Segunda linha-->
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
         </tr>
         <tr> <!--Terceira linha-->
             <td>A3</td>
-            <td class="dado">B3</td>
+            <td>B3</td>
             <td>C3</td>
         </tr>
         <tr> <!--Quarta linha-->
