--- a/Exercicios/023/tabela005.html
+++ b/Exercicios/023/tabela005.html
@@ -33,60 +33,67 @@
         col.csexo{
             background-color: red;
         }
+
+        div#container{
+            overflow-x: auto;
+        }
     </style>
 </head>
 <body>
     <h1>Exercícios de tabelas</h1>
-    <table>
-        <colgroup>
-            <col class="cnome">
-            <col class="csexo" span="2">
-            <col class="cidade">
-            <col class="cprof">
-        </colgroup>
-        <caption>Cadastro</caption>
-        <tr>
-            <th scope="col">Nome</th>
-            <th scope="col">Sexo</th>
-            <th scope="col">Idade</th>
-            <th scope="col">Profissão</th>
-        </tr>
-        <tr>
-            <td>Almir</td>
-            <td>M</td>
-            <td>36</td>
-            <td>Técnico</td>
-        </tr>
-        <tr>
-            <td>Almir</td>
-            <td>M</td>
-            <td>36</td>
-            <td>Técnico</td>
-        </tr>
-        <tr>
-            <td>Almir</td>
-            <td>M</td>
-            <td>36</td>
-            <td>Técnico</td>
-        </tr>
-        <tr>
-            <td>Almir</td>
-            <td>M</td>
-            <td>36</td>
-            <td>Técnico</td>
-        </tr>
-        <tr>
-            <td>Almir</td>
-            <td>M</td>
-            <td>36</td>
-            <td>Técnico</td>
-        </tr>
-        <tr>
-            <td>Almir</td>
-            <td>M</td>
-            <td>36</td>
-            <td>Técnico</td>
-        </tr>
-    </table>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae perferendis id blanditiis similique numquam, in animi, earum necessitatibus consectetur, reiciendis ea recusandae praesentium nihil et inventore eius itaque consequatur fugiat.</p>
+    <div id="container"> <!--Técnica para responsividade de tabela dentro da página-->
+        <table>
+            <colgroup>
+                <col class="cnome">
+                <col class="csexo" span="2">
+                <col class="cidade">
+                <col class="cprof">
+            </colgroup>
+            <caption>Cadastro</caption>
+            <tr>
+                <th scope="col">Nome</th>
+                <th scope="col">Sexo</th>
+                <th scope="col">Idade</th>
+                <th scope="col">Profissão</th>
+            </tr>
+            <tr>
+                <td>Almir</td>
+                <td>M</td>
+                <td>36</td>
+                <td>Técnico</td>
+            </tr>
+            <tr>
+                <td>Almir</td>
+                <td>M</td>
+                <td>36</td>
+                <td>Técnico</td>
+            </tr>
+            <tr>
+                <td>Almir</td>
+                <td>M</td>
+                <td>36</td>
+                <td>Técnico</td>
+            </tr>
+            <tr>
+                <td>Almir</td>
+                <td>M</td>
+                <td>36</td>
+                <td>Técnico</td>
+            </tr>
+            <tr>
+                <td>Almir</td>
+                <td>M</td>
+                <td>36</td>
+                <td>Técnico</td>
+            </tr>
+            <tr>
+                <td>Almir</td>
+                <td>M</td>
+                <td>36</td>
+                <td>Técnico</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
